--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Self hosted pastebin",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp"
+    "build": "gulp",
+    "linter": "tslint -c tslint.json ./src/**/*.ts"
   },
   "repository": {
     "type": "git",
